# ecoChain

./: test.txt
AccountMgr/: CMakeLists.txt  Makefile  readme.txt
AccountMgr/doc/: 区块链权限设计文档.docx
AccountMgr/libAccountMgr/: AccountMgr.cpp  AccountMgr.h  CMakeLists.txt  DataDefine.h  HttpServer.cpp  HttpServer.h  LogicManager.cpp  LogicManager.h  Makefile
AccountMgr/libAccountMgr/Jsoncpp/: Makefile  cmake_install.cmake  json_reader.cpp  json_value.cpp  json_writer.cpp
AccountMgr/src/: CMakeLists.txt  Makefile  main.cpp
EC_Sign/btcsign/: CMakeCache.txt  CMakeLists.txt  ErrorCode.h  Makefile  README.md  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  btcsign.cbp  cmake_install.cmake  common.h  ecmult_const.h  ecmult_const_impl.h  field.h  field_10x26_impl.h  field_5x52_impl.h  field_impl.h  group.h  group_impl.h  hash.cpp  hash.h  hash_impl.h  interface.cpp  key.cpp  key.h  libsecp256k1-config.h  num.h  num_gmp_impl.h  pagelocker.cpp  pagelocker.h  pubkey.cpp  pubkey.h  random.cpp  random.h  scalar.h  scalar_4x64_impl.h  scalar_impl.h  secp256k1.c  secure.h  (+7 more)
EC_Sign/btcsign/config/: bitcoin-config.h
TEST/bcApiTest/: build.sh  readme.txt  run.sh
TEST/preTestTool/: readme.txt
bitcoin-0.12.0/: Makefile  Makefile.in  aclocal.m4  bitcoind.files  bitcoind.includes  config.status  configure  configure.ac  libbitcoinconsensus.pc  libtool
bitcoin-0.12.0/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
bitcoin-0.12.0/bitcoin-0.12.0/: configure.ac
bitcoin-0.12.0/share/: setup.nsi
bitcoin-0.12.0/src/: .cproject  Makefile  Makefile.am  Makefile.in  amount.h  bitcoin-tx.cpp  bitcoin_proj.includes  bitcoind.cpp  chain.h  chainparams.cpp  chainparamsseeds.h  coins.h  core_memusage.h  core_read.cpp  httprpc.cpp  httpserver.cpp  init.cpp  init.h  key.cpp  key.h  main.cpp  main.h  merkleblock.cpp  miner.cpp  miner.h  net.cpp  net.h  pow.cpp  protocol.cpp  protocol.h  pubkey.cpp  pubkey.h  rest.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcrawtransaction.cpp  rpcserver.cpp  (+7 more)
bitcoin-0.12/src/: clientversion.cpp
branches/bran-test1/: bitcoin_qt_proj.includes  bitcoind.files
hbase_env/HbaseOperate/: HbaseOperate.cpp  HbaseOperate.h  Makefile  Makefile.bak  log4cxx.properties  main.c  (+3 more)
interface-doc/: multisig_test.txt  区块链接口文档.docx  单个签名.txt  单个签名测试.txt  多重签名测试.txt  数据类.txt  新接口rpc调用说明.md  测试数据.txt
(+211 files in other folders)
